# machine-learning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
classification/: multinomialLR.ipynb
computer_vision/: efficientnet.ipynb
