[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["shanks"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "~2.10"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.4"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
split-folders = "^0.5.1"
opencv-python = "^4.9.0.80"
seaborn = "^0.13.2"
tensorflow-hub = "^0.16.1"
nltk = "^3.8.1"
imblearn = "^0.0"
xgboost = "^2.0.3"
beautifulsoup4 = "^4.12.3"
scipy = "1.10.1"
gensim = "^4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
